fix: make errors text wrap

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -180,7 +180,6 @@
   font-size: 12px;
   border-radius: 5px;
   padding: 5px 10px;
-  white-space: nowrap;
   top: 100%;
   left: 0;
   transform: translateY(5px);
